Add tips filter control with multiple options

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -18,3 +18,18 @@
 
 </div>
 <div id="custom-map" style="width:100%; height:500px; border-radius:12px; margin-top:20px;"></div>
+
+<!-- Tips Filter Control -->
+<div id="tips-filter" class="filter-bar">
+  <label><input type="checkbox" class="tip-toggle" value="Transportation" checked> Transportation</label>
+  <label><input type="checkbox" class="tip-toggle" value="Security" checked> Security</label>
+  <label><input type="checkbox" class="tip-toggle" value="Saving" checked> Saving</label>
+  <label><input type="checkbox" class="tip-toggle" value="Weather/Clothing" checked> Weather/Clothing</label>
+  <label><input type="checkbox" class="tip-toggle" value="Cultural" checked> Cultural</label>
+  <label><input type="checkbox" class="tip-toggle" value="Local Hacks" checked> Local Hacks</label>
+  <label><input type="checkbox" class="tip-toggle" value="Ride-hailing" checked> Ride-hailing</label>
+  <label><input type="checkbox" class="tip-toggle" value="Bykes" checked> Bykes</label>
+  <label><input type="checkbox" class="tip-toggle" value="Public transportation" checked> Public transportation</label>
+  <label><input type="checkbox" class="tip-toggle" value="Car Rental" checked> Car Rental</label>
+</div>
+
