--- a/maps-bank.html
+++ b/maps-bank.html
@@ -33,3 +33,5 @@
   <label><input type="checkbox" class="tip-toggle" value="Car Rental" checked> Car Rental</label>
 </div>
 
+<button id="exportPdfBtn" class="pdf-btn" disabled>Download PDF</button>
+
