Enable PDF download button

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -33,5 +33,5 @@
   <label><input type="checkbox" class="tip-toggle" value="Car Rental" checked> Car Rental</label>
 </div>
 
-<button id="exportPdfBtn" class="pdf-btn" disabled>Download PDF</button>
+<button id="exportPdfBtn" class="pdf-btn">Download PDF</button>
 
