Add buttons for sharing places and tips

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -34,4 +34,5 @@
 </div>
 
 <button id="exportPdfBtn" class="pdf-btn">Download PDF</button>
-
+<button id="sharePlacesBtn" class="pdf-btn">Share places</button>
+<button id="sharePlacesTipsBtn" class="pdf-btn">Share places &amp; tips</button>
