Replace transportation options with new checkboxes

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -27,9 +27,8 @@
   <label><input type="checkbox" class="tip-toggle" value="Weather/Clothing" checked> Weather/Clothing</label>
   <label><input type="checkbox" class="tip-toggle" value="Cultural" checked> Cultural</label>
   <label><input type="checkbox" class="tip-toggle" value="Local Hacks" checked> Local Hacks</label>
-  <label><input type="checkbox" class="tip-toggle" value="Ride-hailing" checked> Ride-hailing</label>
-  <label><input type="checkbox" class="tip-toggle" value="Bykes" checked> Bykes</label>
-  <label><input type="checkbox" class="tip-toggle" value="Public transportation" checked> Public transportation</label>
+  <label><input type="checkbox" class="tip-toggle" value="Apps" checked> Apps</label>
+  <label><input type="checkbox" class="tip-toggle" value="Public Transportation Payment" checked> Public Transportation Payment</label>
   <label><input type="checkbox" class="tip-toggle" value="Car Rental" checked> Car Rental</label>
 </div>
 
