Add tips filter control to maps-bank.html

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -21,6 +21,7 @@
 
 <!-- Tips Filter Control -->
 <div id="tips-filter" class="filter-bar">
+  <span class="filter-title">Tips:</span>
   <label><input type="checkbox" class="tip-toggle" value="Transportation" checked> Transportation</label>
   <label><input type="checkbox" class="tip-toggle" value="Security" checked> Security</label>
   <label><input type="checkbox" class="tip-toggle" value="Saving" checked> Saving</label>
