--- a/maps-bank.html
+++ b/maps-bank.html
@@ -36,3 +36,4 @@
 <button id="exportPdfBtn" class="pdf-btn">Download PDF</button>
 <button id="sharePlacesBtn" class="pdf-btn">Share places</button>
 <button id="sharePlacesTipsBtn" class="pdf-btn">Share places &amp; tips</button>
+<button id="googleMyMaps" class="pdf-btn">Save places on your Google Maps app</button>
