Update Check Maps button with new class

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -7,7 +7,7 @@
   </label>
   
   <!-- New: CTA button (disabled until both dropdowns are set) -->
-  <button id="checkMapsBtn" disabled>Check Maps</button>
+  <button id="checkMapsBtn" class="pdf-btn checkmaps-btn" disabled>Check Maps</button>
   
   <!-- New: loading message -->
   <div id="loadingMessage" style="display:none; margin:8px 0; font-weight:600;">
