Add button to download KML file

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -37,3 +37,5 @@
 <button id="sharePlacesBtn" class="pdf-btn">Share places</button>
 <button id="sharePlacesTipsBtn" class="pdf-btn">Share places &amp; tips</button>
 <button id="googleMyMaps" class="pdf-btn">Save places on your Google Maps app</button>
+<button id="exportKmlBtn" class="pdf-btn">Download KML</button>
+
