Update city loading message display style

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -5,9 +5,7 @@
   <label>City:
     <select id="citySelect"></select>
   </label>
-  <div id="cityLoadingMsg" style="display:none; margin:6px 0 0; font-size:12px; color:#555;">
-  Loading cities, please wait…
-</div>
+<div id="cityLoadingMsg" class="city-hint">Loading cities, please wait…</div>
   <!-- New: CTA button (disabled until both dropdowns are set) -->
   <button id="checkMapsBtn" class="pdf-btn checkmaps-btn" disabled>Check Maps</button>
   
