--- a/maps-bank.html
+++ b/maps-bank.html
@@ -7,6 +7,15 @@
   </label>
 <div id="cityLoadingMsg" class="city-hint">Loading cities, please wait…</div>
   <!-- New: CTA button (disabled until both dropdowns are set) -->
+<div class="city-help-row">
+  <a href="#" id="cityHelpLink" class="city-help-link">Don’t see your city?</a>
+  <div id="cityHelpPopover" class="city-help-popover" role="dialog" aria-hidden="true" aria-labelledby="cityHelpTitle">
+    <button type="button" class="city-help-close" aria-label="Close">×</button>
+    <h4 id="cityHelpTitle">City not listed</h4>
+    <p>We’re rolling out cities gradually in this first release. If you’d like yours added, email <a href="mailto:mapvivid@gmail.com">mapvivid@gmail.com</a> or contact <strong>Sergio Franco</strong> (owner). We’ll prioritize it.</p>
+  </div>
+</div>
+  
   <button id="checkMapsBtn" class="pdf-btn checkmaps-btn" disabled>Check Maps</button>
   
   <!-- New: loading message -->
