Update city help message in maps-bank.html

--- a/maps-bank.html
+++ b/maps-bank.html
@@ -11,8 +11,7 @@
   <a href="#" id="cityHelpLink" class="city-help-link">Don’t see your city?</a>
   <div id="cityHelpPopover" class="city-help-popover" role="dialog" aria-hidden="true" aria-labelledby="cityHelpTitle">
     <button type="button" class="city-help-close" aria-label="Close">×</button>
-    <h4 id="cityHelpTitle">City not listed</h4>
-    <p>We’re rolling out cities gradually in this first release. If you’d like yours added, email <a href="mailto:mapvivid@gmail.com">mapvivid@gmail.com</a> or contact <strong>Sergio Franco</strong> (owner). We’ll prioritize it.</p>
+    <p>We’re rolling out cities gradually in this first release. If you’d like yours added, email <a href="mailto:mapvivid@gmail.com">mapvivid@gmail.com</a> or contact <strong>Sergio Franco</strong> (owner).— I’ll add it for you.</p>
   </div>
 </div>
   
