--- a/cityroute-form.html
+++ b/cityroute-form.html
@@ -1,4 +1,4 @@
-<form id="mv-form" style="max-width:720px;margin:auto;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;">
+<form id="mv-form" style="max-width:100%;margin:auto;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;">
   <h2 style="margin-bottom:16px;font-size:1.5rem;font-weight:700">Build your personalized city route</h2>
 
   <!-- Country -->
@@ -126,7 +126,7 @@
 <p id="mv-status" style="margin-top:12px;color:#374151"></p>
 
 <!-- Lightweight step progress (does not slow the app) -->
-<div id="mv-progress" style="display:none;max-width:720px;margin:8px auto 0">
+<div id="mv-progress" style="display:none;max-width:100%;margin:8px auto 0">
   <div id="mv-progress-label" style="font-size:12px;color:#6b7280;margin-bottom:6px">Preparing…</div>
   <div style="height:8px;background:#e5e7eb;border-radius:9999px;overflow:hidden">
     <div id="mv-progress-bar" style="height:8px;width:0%;background:#6366f1;transition:width .25s ease"></div>
@@ -134,7 +134,7 @@
 </div>
 
 <!-- Skeleton shown while we wait for first response -->
-<div id="mv-skeleton" style="display:none;max-width:720px;margin:16px auto;font-family:Inter,Arial,sans-serif">
+<div id="mv-skeleton" style="display:none;max-width:100%;margin:16px auto;font-family:Inter,Arial,sans-serif">
   <div style="height:14px;width:30%;background:#eee;border-radius:6px;margin:10px 0;animation:pulse 1.2s infinite"></div>
   <div style="height:10px;width:80%;background:#eee;border-radius:6px;margin:8px 0;animation:pulse 1.2s infinite"></div>
   <div style="height:10px;width:70%;background:#eee;border-radius:6px;margin:8px 0;animation:pulse 1.2s infinite"></div>
@@ -145,5 +145,5 @@
 </div>
 
 <!-- Itinerary container (hidden by default) -->
-<div id="itinerary" style="display:none;max-width:720px;margin:auto;font-family:Inter,Arial,sans-serif;"></div>
+<div id="itinerary" style="display:none;max-width:100%;margin:auto;font-family:Inter,Arial,sans-serif;"></div>
 
