--- a/cityroute-form.html
+++ b/cityroute-form.html
@@ -57,7 +57,7 @@
     <label><input type="checkbox" name="categories" value="Food/Restaurants"> Food/Restaurants</label>
     <label><input type="checkbox" name="categories" value="Local markets"> Local markets</label>
     <label><input type="checkbox" name="categories" value="Instagram spots"> Instagram spots</label>
-    <label><input type="checkbox" name="categories" value="Parks/Nature"> Parks/Nature</label>
+    <label><input type="checkbox" name="categories" value="Parks/Nature/Beaches"> Parks/Nature/Beaches</label>
     <label><input type="checkbox" name="categories" value="Historical sites"> Historical sites</label>
     <label><input type="checkbox" name="categories" value="Nightlife"> Nightlife</label>
     <label><input type="checkbox" name="categories" value="Shopping"> Shopping</label>
