--- a/cityroute-form.html
+++ b/cityroute-form.html
@@ -85,6 +85,16 @@
     <label><input type="checkbox" name="mobility" value="car"> Car rental</label>
   </div>
 
+  <!-- Companion type -->
+  <p style="margin:12px 0 6px;font-weight:600">Who are you traveling with?</p>
+  <div style="display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:8px;margin-bottom:12px">
+    <label><input type="radio" name="companion_type" value="solo" checked> Solo</label>
+    <label><input type="radio" name="companion_type" value="couple"> Couple</label>
+    <label><input type="radio" name="companion_type" value="friends"> Friends</label>
+    <label><input type="radio" name="companion_type" value="family"> Family</label>
+    <label><input type="radio" name="companion_type" value="family_kids"> Family with kids</label>
+  </div>
+
   <!-- Pace (1–5) -->
   <p style="margin:12px 0 6px;font-weight:600">Preferred pace (1–5)</p>
   <div style="display:flex;align-items:center;gap:10px;margin-bottom:12px">
