--- a/cityroute-form.html
+++ b/cityroute-form.html
@@ -73,6 +73,10 @@
     <label><input type="checkbox" name="tip_focus" value="weather_clothing"> Weather/Clothing</label>
     <label><input type="checkbox" name="tip_focus" value="cultural"> Cultural</label>
     <label><input type="checkbox" name="tip_focus" value="local_hacks"> Local hacks</label>
+    <label><input type="checkbox" name="tip_focus" value="tipping_payment_methods"> Tipping &amp; Payment Methods</label>
+    <label><input type="checkbox" name="tip_focus" value="internet_sim_cards"> Internet &amp; SIM Cards</label>
+    <label><input type="checkbox" name="tip_focus" value="meetups_social_events"> Meetups &amp; Social Events</label>
+
   </div>
 
   <!-- Getting around -->
